<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16ABBC"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/txt_historial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:hint="@string/txt_historial"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:hint="@string/txt_res"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0." />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <Button
        android:id="@+id/b_C"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_C"
        android:textSize="20sp"
        android:onClick="c"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <Button
        android:id="@+id/b_del"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_del"
        android:textSize="16sp"
        android:onClick="del"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <Button
        android:id="@+id/b7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b7"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/b8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b8"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline26" />

    <Button
        android:id="@+id/b_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_div"
        android:textSize="20sp"
        android:onClick="operacion"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <Button
        android:id="@+id/b_mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_mul"
        android:textSize="20sp"
        android:onClick="operacion"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <Button
        android:id="@+id/b9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b9"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline26" />

    <Button
        android:id="@+id/b5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b5"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <Button
        android:id="@+id/b6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b6"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <Button
        android:id="@+id/b_sum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_sum"
        android:textSize="20sp"
        android:onClick="operacion"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline29"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/b4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b4"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <Button
        android:id="@+id/b_res"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_res"
        android:textSize="20sp"
        android:onClick="operacion"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/b2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b2"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline31"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <Button
        android:id="@+id/b3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b3"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline31"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <Button
        android:id="@+id/b_punto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_punto"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline31"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline32"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/b1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#920DA8"
        android:text="@string/b1"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline31"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline32"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/b0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b0"
        android:textSize="20sp"
        android:onClick="num"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline34" />

    <Button
        android:id="@+id/b_ig"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#680678"
        android:text="@string/b_ig"
        android:textSize="20sp"
        android:onClick="igual"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>